(Bug 5073) Don't use width:100% on #content
The #content element is nested and may have applied margins to it that
could cause scrollbars. So let's use nested-collapse instead of the
default.

--- a/htdocs/scss/schemes/gradation/_gradation-base.scss
+++ b/htdocs/scss/schemes/gradation/_gradation-base.scss
@@ -107,7 +107,7 @@ ul { list-style: circle; }
  */
 
 #content {
-    @include grid-row(false);
+    @include grid-row( nested-collapse );
     padding-top: 1.5em;
 }
 
